[FLINK-28749] Include resource type in KubernetesOperatorResourceNamespaceMetricGroup